# longest-word

./: pyproject.toml  requirements.txt  wsgi.py
longest_word/: game.py
tests/: test_game.py
