[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["Tom Brooks <tombrooks248@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.3.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
